--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            .buttonBox {
+                display: flex;
+                justify-content: space-between;
+                width: 50%;
+            }
+        </style>
     </head>
     <body>
         <h1>HOTJAR TEST</h1>
         <p>This is a test page for hotjar</p>
+        <div class="buttonBox">
+            <button button="button" onClick='alert("Clicked button 1")'>Click me 1</button>
+            <button button="button" onClick='alert("Clicked button 2")'>Click me 2</button>
+            <button button="button" onClick='alert("Clicked button 3")'>Click me 3</button>
+        </div>
+        <br />
         <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" width="400px" />
         
 
