--- a/index.html
+++ b/index.html
@@ -1,37 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            .buttonBox {
-                display: flex;
-                justify-content: space-between;
-                width: 50%;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>HOTJAR TEST</h1>
-        <p>This is a test page for hotjar</p>
-        <div class="buttonBox">
-            <button button="button" onClick='alert("Clicked button 1")'>Click me 1</button>
-            <button button="button" onClick='alert("Clicked button 2")'>Click me 2</button>
-            <button button="button" onClick='alert("Clicked button 3")'>Click me 3</button>
-        </div>
-        <br />
-        <img src="https://i.kym-cdn.com/entries/icons/original/000/027/475/Screen_Shot_2018-10-25_at_11.02.15_AM.png" width="400px" />
-        
-
-        <script>
-            (function(h,o,t,j,a,r){
-                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-                h._hjSettings={hjid:2224732,hjsv:6};
-                a=o.getElementsByTagName('head')[0];
-                r=o.createElement('script');r.async=1;
-                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-                a.appendChild(r);
-            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-        </script>
-    </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Balgurra Stuff</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<img src="./chess.png" alt="chess">
+	<img src="./chess1.png" alt="chess1">
+	<img src="./horse.png" alt="horse">
+	<img src="./horse1.png" alt="horse1">
+	<img src="./horse2.png" alt="horse2">
+	<img src="./lady1.png" alt="lady">
+	<img src="./lady2.png" alt="lady2">
+	<img src="./statue1.png" alt="ruin">
+	<img src="./statue2.png" alt="ruin">
+	<img src="./urban.png" alt="urban">
+</body>
 </html>
